<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

	<item
		android:id="@+id/home_menuItem_login"
		android:icon="@drawable/ic_menu_login_white"
		android:showAsAction="always"
		android:title="@string/home_social_login"/>
	<item
		android:id="@+id/home_menuItem_setFlag"
		android:icon="@drawable/ic_menu_myplaces_white"
		android:showAsAction="ifRoom"
		android:title="@string/home_record_checkin"/>
	<item
		android:id="@+id/home_menuItem_recImage"
		android:icon="@drawable/ic_media_play_white"
		android:showAsAction="ifRoom"
		android:title="@string/home_record_course"/>
	<item
		android:id="@+id/home_menuItem_preferences"
		android:icon="@drawable/ic_menu_preferences_white"
		android:showAsAction="never"
		android:title="@string/preferences_file"/>
	<item
		android:id="@+id/home_menuItem_exit"
		android:icon="@drawable/ic_menu_exit_white"
		android:showAsAction="never"
		android:title="@string/home_social_logout"/>

</menu>