<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/linearLayout_noPadding"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="0" >

        <TableRow>

            <TextView
                android:id="@+id/infoPinCurrent"
                android:padding="3dip"
                android:text="@string/help_dialog_pin_current" >
            </TextView>

            <ImageView
                android:id="@+id/imgInfoPinCurrent"
                android:padding="3dip"
                android:src="@drawable/maps_icon_current" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/infoPinNext"
                android:padding="3dip"
                android:text="@string/help_dialog_pin_next" >
            </TextView>

            <ImageView
                android:id="@+id/imgInfoPinNext"
                android:padding="3dip"
                android:src="@drawable/maps_icon" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/infoPinPrevious"
                android:padding="3dip"
                android:text="@string/help_dialog_pin_previous" >
            </TextView>

            <ImageView
                android:id="@+id/imgInfoPinPrevious"
                android:padding="3dip"
                android:src="@drawable/maps_icon_former" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/ButtonOK"
                android:layout_gravity="center_horizontal"
                android:text="@string/ok" >
            </Button>
        </TableRow>
    </TableLayout>

</RelativeLayout>