<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:id="@+id/layout"
    android:paddingLeft="20dip"
	android:paddingRight="10dip"
	android:paddingTop="10dip"
    >
    
        <!--  android:background="@drawable/ic_launcher"-->
  <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:id="@+id/layout"
    android:paddingBottom="20dip"
   >
   <ImageView 
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:src="@drawable/ic_launcher"
       
       />
     <TextView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:text="@string/hello"
        android:id="@+id/nameTextView"
        android:textSize="30dip"
        android:paddingLeft="10dip"
        android:gravity="center_vertical" />
      
  </LinearLayout>
  
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="TOURISME"
        android:textSize="10dip"
        android:clickable="true"
        android:textColor="#FFFFFFFF" />
    
    <View
        android:layout_height="2dip"
        android:layout_width="match_parent"/>
    
    <View
        android:layout_height="1dip"
        android:layout_width="match_parent"
        android:background="#FF909090" />     
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_cities_all"
        android:textSize="20dip"
        android:clickable="true"
        android:layout_marginBottom="5dip"
        android:layout_marginTop="2dip"
        android:onClick="allCityActivityClick" />
       
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_poi"
        android:textSize="20dip"
        android:clickable="true"
        android:paddingBottom="10dip" />
                     
     <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="SOCIAL"
        android:textSize="10dip"
        android:clickable="true"
        android:textColor="#FFFFFFFF" />
    
	<View
        android:layout_height="2dip"
        android:layout_width="match_parent"/>
    
    <View
        android:layout_height="1dip"
        android:layout_width="match_parent"
        android:background="#FF909090"
        android:paddingBottom="5dip" />
     
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_social_chat"
        android:textSize="20dip"
        android:clickable="true"
        android:paddingTop="5dip" 
        android:paddingBottom="5dip" 
        android:onClick="social"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_social_contacts"
        android:textSize="20dip"
        android:clickable="true"
        android:paddingBottom="5dip" />
    <TextView
        android:id="@+id/googleLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_social_profil"
        android:textSize="20dip"
        android:clickable="true"
        android:paddingBottom="5dip" />
      
    <TextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
    	 android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>